--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donation</title>
-
+    <title>Project Donation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1> * Donation For Flood Victims * </h1>
-    <img src="images/donation13.jpg" alt="">
-    <p>Since May 2022, Bangladesh has been hit with one of the worst floods in years, with millions in Sylhet and
-        Sunamganj now homeless and without any belongings. Moreover, according to the European Centre for Medium-Range
-        Weather </p>
-    <a class="press button" target="_blank" href="https://www.google.com/">Donate Now</a>
-
-
+    <div style="background-image: url(images/donation13.jpg);">
+        <h1>Support Flood Victim</h1>
+        <p>The last couple of weeks have been nothing less than
+            hell on Earth for the residents of Sylhet and Sunamganj due to the violent flood that has shown no mercy.
+            This devastating flood has made its place in history by showcasing its wrath, gaining the throne of the
+            queen of all floods in the 122 years flood history of Sylhet. At this moment, more than 80% of Sylhet and
+            more than 90% of Sunamganj is under water.Now we are highly determined to do something for the flood efected
+            people,if you are interested you can join us.</p>
+        <a class="Collecting-Fund" target="_blank" href="https://www.google.com/">Donate</a>
+    </div>
 
 </body>
 
