--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
             people,if you are interested you can join us.</p>
         <a class="Collecting-Fund" target="_blank" href="https://www.google.com/">Donate</a>
     </div>
+    <div class="section first">
+
+        <div class="first fund">
+            <div class="the fund">
+                <img src="" alt="">
+                <p>100TK</p>
+            </div>
+        </div>
+        <div class="first fund"></div>
+        <div class="first fubd">
+            <div>
+            </div>
 
 </body>
 
