--- a/index.html
+++ b/index.html
@@ -20,18 +20,32 @@
             people,if you are interested you can join us.</p>
         <a class="Collecting-Fund" target="_blank" href="https://www.google.com/">Donate</a>
     </div>
-    <div class="section first">
-
-        <div class="first fund">
-            <div class="the fund">
-                <img src="" alt="">
+    <div class="section-first">
+        <h1 class="tittle">Donate Today</h1>
+        <div class="first-fund">
+            <div class="the-fund">
                 <p>100TK</p>
             </div>
         </div>
-        <div class="first fund"></div>
-        <div class="first fubd">
-            <div>
+        <div class="first-fund">
+            <div class="the-fund">
+                <p>300TK</p>
             </div>
+        </div>
+        <div class="first-fund">
+            <div class="the-fund">
+                <p>500TK</p>
+            </div>
+            <div class="first-fund">
+                <div class="the-fund">
+                    <p>1000TK</p>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
 
 </body>
 
