make it changed

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
             people,if you are interested you can join us.</p>
         <a class="Collecting-Fund" target="_blank" href="https://www.google.com/">Donate</a>
     </div>
-    <div class="section-first">
-        <h1 class="tittle">Donate Today</h1>
+    <h1 class="tittle">Donate Today</h1>
+    <div class="Choose-Option">
+
+
         <div class="first-fund">
             <div class="the-fund">
-                <p>100TK</p>
-            </div>
-        </div>
-        <div class="first-fund">
-            <div class="the-fund">
-                <p>300TK</p>
+                <p>200TK</p>
             </div>
         </div>
         <div class="first-fund">
             <div class="the-fund">
                 <p>500TK</p>
+                <h6>Other Amount(TK)</h6>
+                <a class="link-button" target="_blank" href="https://www.google.com/">Donate Now</a>
             </div>
-            <div class="first-fund">
-                <div class="the-fund">
-                    <p>1000TK</p>
-                </div>
+        </div>
+        <div class="first-fund">
+            <div class="the-fund">
+                <p>1000TK</p>
             </div>
 
         </div>
 
-
     </div>
+
+
 
 </body>
 
